environments/gloo-mesh-core/singlecluster/homer-app/glooplatform.com/homer-portal-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homer-portal
  labels:
    istio.io/rev: 1-20
    istio-injection: enabled
---
