environments/gloo-mesh-core/singlecluster/homer-app/glooplatform.com/homer-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: homer
  namespace: homer-portal
spec:
  hosts:
  - "demo.gmc.glooplatform.com"
  gateways:
  - istio-gateways/https-gateway
  http:
  - name: demo-dashboard
    match:
    - uri:
        prefix: "/solo"
    route:
    - destination:
        host: homer-portal
        port:
          number: 8080
  - name: broken-route
    match:
    - uri:
        prefix: "/broken"
    route:
    - destination:
        host: i-dont-exist
        port:
          number: 8080
